test_regress/t/t_flag_structs_packed_bad.out
%Error: t/t_flag_structs_packed.v:11:38: Unpacked data type 'struct{}x.notpacked_t' in packed struct/union (IEEE 1800-2023 7.2.1)
                                       : ... note: In instance 'x'
   11 |   typedef struct packed {notpacked_t b;} ispacked_t;
      |                                      ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
